Migrate all core function libraries to static libraries where applicable.